Issue #3 - Get MozillaTranslator to build and run on JDK 11